syntax = "proto3";
option csharp_namespace = "ChatService";

service ChatService {
	rpc GetChatRooms(Lookup) returns (ChatRooms);
	rpc JoinAndWriteMessage(stream Message) returns (stream Message);
	rpc ShowMessageHistory(Lookup) returns (stream Message);
}

message Message {
	string id = 3;
	string user = 1;
	string text = 2;
	string chatRoomId = 4;
}
message ChatRoomInfo{
	string id = 2;
	string Name = 1;
}
message ChatRoomJoin{
	string chatRoomId = 1;
	string user = 2;
}
message ChatRooms{
	repeated ChatRoomInfo chatRooms = 1;
}
message Lookup{}